src/tests/fixtures/typename/PropertyTypenameDoesNotMatchClassName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = "Group";
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameDoesNotMatchClassName.ts:3:16 - error: Expected `__typename` property initializer to be `"User"`, found `"Group"`.

3   __typename = "Group";
                 ~~~~~~~
